# qldpcCircuit

./: .gitignore  README.md  pyproject.toml
cpp_bp_decoder/: Makefile  README.md  SUMMARY.md  belief_propagation.cpp  belief_propagation.hpp  bp_decoder.cpp  bp_decoder.hpp  bp_decoder_example  example.cpp  logical_error_rate_results_20250702_191218.json  logical_error_rate_results_20250704_112740.json  logical_error_rate_results_20250704_113546.json  python_bindings.cpp  requirements.txt  setup.py  stim_test.py  test_logical_error_all.py  test_logical_error_rate.py  test_scaling_analysis.py
decoding/simulation/: bbcodesim.py
enumcuda/: Makefile  cuda_decoder  cuda_decoder.cpp  cuda_kernels.cu
enumdecoder/: Makefile  README.md  __init__.py  csc_cuda.cu  csc_matrix.cpp  csc_matrix.h  enum_cuda.cu  performance_test_cuda.cpp  pybind_wrapper.cpp  qldpc_decoder.cpp  qldpc_decoder_csc  qldpc_decoder_csc.cpp  qldpc_decoder_csc_simple.cpp  qldpc_decoder_cuda.cpp  setup.py
enumlikelihooddecoder/: CMakeLists.txt  README.md  cuda_decoder.cu  decoder.cpp  pybind_wrapper.cpp  pyproject.toml  qldpc_decoder.cpp  setup.py
marginalBP/: test.py
maxlikelihooddecoder/: CMakeLists.txt  __init__.py  decoder.cpp  pybind_wrapper.cpp  pyproject.toml  qldpc_decoder.cpp  qldpc_decoder.h  setup.py
meanfield/: IMPLEMENTATION_README.md  Makefile  README.md  example.py  meanfield_decoder.cpp  pybind_wrapper.cpp  qlpc_decoder.py  requirements.txt  setup.py  simple_test.py  test_decoder.py
planar/: .gitignore  README.md  pyproject.toml  requirements.txt
planar/experiments/: codes.py  mwpm.py  script.py  simulation_rep_cir.py  subsample_simulation.py  test.ipynb
planar/planar/: __init__.py  kacward.py  planar_decoder.py  utils.py
qldpcdecoding/: bpdecoders.py  codes.py  logicalbp.py  maxlikelihooddecoders.py
qldpcdecoding/marginalBP_cpp/: Makefile  README.md  marginal_bp_decoder.cpp  marginal_bp_decoder.hpp  marginal_bp_wrapper.py  python_bindings.cpp  requirements.txt  setup.py  test_comparison.py
qldpcdecoding/simulation/: bbcodesim.py  bbcodesimfull.py  bbcodesimmeas.py  independentsim.py
qldpcdecoding/simulation/BBcode/: decoder_run.py
test/: stim_test.py
treedecomp/: treedecompse.py
