[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qldpcdecoding"
version = "0.1.0"
description = "A realtime decoder for QLDPC codes, including the software and hardware implementations."
authors = [
    { name="Debin Xiang", email="db.xiang@zju.edu.cn" }
]
license = { text="GNU GENERAL PUBLIC LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ldpc==0.1.60",
    "numpy",
    "z3-solver",
    "ray",
    "cvxpy",
    "pybind11>=2.6.0"
]

[project.urls]
Homepage = "https://janusq.com/"
Repository = "https://github.com/JanusQ/QECDecoder"

[tool.setuptools.packages.find]
where = ["."]
include = ["qldpcdecoding*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"] 